iter_language/tests/corpus/valid/runner-once-hook.iter
queue memory

workspace clone {
  base = "."
  excludes = []
  preserve_mtime = true
  apply_back { mode = sync }}

agent claude {
  mode = print
  command = "claude"
}

runner {
  agent = claude
  workspace = clone
  queue = memory
  continue_on_error = false
  behavior = wait
  prompt = "Iterate on the workspace once."

  on runner_starting {
    shell "test -d .iter/wt || git worktree add .iter/wt HEAD"
  }

  on runner_finished {
    shell "echo 'runner done; worktree retained at .iter/wt'"
  }
}
